# prefect-slurm-worker

./: CHANGELOG.md  README.md  pyproject.toml
src/prefect_slurm_worker/: __init__.py  apptainer.py  worker.py
src/prefect_slurm_worker/experimental/: __init__.py  decorators.py
