[project]
name = "prefect-slurm-worker"
version = "0.6.0"
description = "Default template for PDM package"
authors = [
    {name = "svenrdz", email = "svenbmr@gmail.com"},
]
dependencies = [
    "prefect>=2.19",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points."prefect.collections"]
prefect_slurm_worker = "prefect_slurm_worker"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyter-console>=6.6.3",
    "prefect-gitlab>=0.2.2",
    "-e file:///home/srodriguez/ipsl/workflower/prefecter/prefect#egg=prefect",
    "starlette-admin>=0.13.2",
    "watchfiles>=0.21.0",
]
