[project]
name = "prefect-slurm-worker"
version = "0.7.0"
description = "Default template for PDM package"
authors = [
    {name = "svenrdz", email = "svenbmr@gmail.com"},
]
dependencies = [
    "prefect>=3.0.1",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.entry-points."prefect.collections"]
prefect_slurm_worker = "prefect_slurm_worker"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "jupyter-console>=6.6.3",
    # "prefect-gitlab>=0.2.2",
    # "-e file:///home/srodriguez/ipsl/workflower/prefecter/prefect#egg=prefect",
    "watchfiles>=0.21.0",
    "icecream>=2.1.3",
    # BEGIN dependencies from fastapi-users
    # "makefun<2.0.0,>=1.11.2",
    # "pyjwt[crypto]==2.8.0",
    # "pwdlib[argon2,bcrypt]==0.2.0",
    # END dependencies from fastapi-users
    "ipdb>=0.13.13",
    "prefect-aws>=0.4.17",
    "paramiko>=3.4.0",
    "prefect-docker>=0.5.2",
]

[tool.pdm.scripts]
debug = "prefect dev debug"

[tool.rye]
dev-dependencies = [
    "jupyter-console>=6.6.3",
    "prefect[docker]>=3.0.1",
]
