[project]
name = "prefect-slurm-worker"
version = "0.7.3"
description = "Default template for PDM package"
authors = [
    {name = "svenrdz", email = "svenbmr@gmail.com"},
]
dependencies = [
    "prefect==3.*",
]
readme = "README.md"
requires-python = ">= 3.9"
license = {text = "MIT"}

[project.entry-points."prefect.collections"]
prefect_slurm_worker = "prefect_slurm_worker"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prefect_slurm_worker"]
